[gd_scene load_steps=5 format=3 uid="uid://so6wak315t71"]

[ext_resource type="PackedScene" uid="uid://gyqvsuirh7wl" path="res://bala.tscn" id="1_7gdj4"]
[ext_resource type="Script" uid="uid://cgim0fea3l5k0" path="res://nivel.gd" id="1_vttml"]
[ext_resource type="PackedScene" uid="uid://dv1lnauqlnf81" path="res://drone_paco.tscn" id="2_j87l1"]
[ext_resource type="PackedScene" uid="uid://cyy62f7jvxdqc" path="res://mateo.tscn" id="3_ymy7k"]
[ext_resource type="Texture2D" uid="uid://lk4igkvs8jhf" path="res://background.jpg" id="7_6apml"]

[node name="Nivel" type="Node2D" groups=["nivel"]]
script = ExtResource("1_vttml")
enemy_scene = ExtResource("2_j87l1")

[node name="Fondo" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = ExtResource("7_6apml")

[node name="Mateo" parent="." groups=["player"] instance=ExtResource("3_ymy7k")]
position = Vector2(640, 360)
bala_scene = ExtResource("1_7gdj4")

[node name="SpawnerTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
volume_db = -5.0
autoplay = false

[node name="UI" type="CanvasLayer" parent="."]

[node name="KillsLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 32
text = "Kills: 0"

[node name="HealthLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 60.0
offset_right = 200.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 28
text = "HP: 100"

[connection signal="timeout" from="SpawnerTimer" to="." method="_on_spawner_timer_timeout"]
